[metadata]
name = tpRigToolkit-tools-rignode
description = Node based auto rigger based on PyFlow
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: tpRigToolkit.tools.rignode.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-tools-rignode

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    tpRigToolkit-core
    PyFlow @ git+https://github.com/wonderworks-software/PyFlow.git@release#egg=PyFlow

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1